Fixed problem with link: On mobile it was showed with two lines

--- a/src/styles/Projects.module.scss
+++ b/src/styles/Projects.module.scss
@@ -1,119 +1,104 @@
-    @mixin button($name, $b-color, $f-color, $width, $height, $line-height) {
+.projects {
 
-        .#{$name} {
-            display: inline-block;
-            background-color: #{$b-color};
-            color: #{$f-color};
-            width: #{$width}rem;
-            height: #{$height}rem;;
-            line-height: #{$line-height}rem;
-            border-radius: 5px;
-            user-select: none;
-            text-align: center;
-            margin: 0.5rem;
-        }
+    margin-bottom: 4rem;
+    padding: 3rem 5rem;
+    width: 75%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: white;
+    
+    h2 {
+        text-align: center;
+        padding-bottom: 3rem;
+        text-transform: uppercase;
     }
-    
-    .projects {
-    
-        margin-bottom: 4rem;
-        padding: 3rem 5rem;
-        width: 75%;
-        height: auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        background-color: white;
+
+    .projectsContainer {
+
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
         
-        h2 {
-            text-align: center;
-            padding-bottom: 3rem;
-            text-transform: uppercase;
-        }
+        .project {
 
-        .projectsContainer {
-
+            border-radius: 5px;
+            overflow: hidden;        
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 2rem;
+            grid-template-rows: 1fr 2.5fr;
+            border: 1px solid gray;
             
-            .project {
+            .screenshot {
+            
+                img {
+                    width: 100%;
+                    height: auto;
+                };
+            }
 
-                border-radius: 5px;
-                overflow: hidden;        
-                display: grid;
-                grid-template-rows: 1fr 2.5fr;
-                //flex-direction: column;
-                border: 1px solid gray;
-                
-                .screenshot {
-                
-                    img {
-                        width: 100%;
-                        height: auto;
-                    };
+            .overview {
+            
+                display: flex;
+                flex-direction: column;
+                padding: 0 0.7rem;
+                width: 100%;
+
+                h4 {
+                    padding: 1rem 0 0.5rem;
+                    text-transform: uppercase;  
                 }
 
-                .overview {
-                
+                .technologies {
+                    
                     display: flex;
-                    //grid-template-rows: 1fr 1fr 3fr 1fr;
-                    flex-direction: column;
-                    padding: 0 0.7rem;
-                    width: 100%;
-
-                    h4 {
-                        padding: 1rem 0 0.5rem;
-                        text-transform: uppercase;  
+                    flex-wrap: wrap;
+                    gap: 0.5rem;
+                    margin: 1rem 0;
+                    
+                    span {
+                        line-height: 1rem;
+                        border-radius: 5px;
+                        font-size: 0.7rem;
+                        background-color: black;
+                        color: white;
+                        padding: 0.2rem 0.5rem ;
                     }
+                }
 
-                    .technologies {
-                        display: flex;
-                        flex-wrap: wrap;
-                        gap: 0.5rem;
-                        margin: 1rem 0;
-                        
-                        span {
-                            line-height: 1rem;
-                            border-radius: 5px;
-                            font-size: 0.7rem;
-                            background-color: black;
-                            color: white;
-                            padding: 0.2rem 0.5rem ;
-                        }
-                    }
+                p {
+                    line-height: 1.5rem;
+                }
 
-                    p {
-                        line-height: 1.5rem;
-                    }
-    
+                .link {
+
+                    margin: 1rem auto;
                     a {
-                        align-self: center;
-                        margin: 1rem auto;
                         text-decoration: underline;
                         color: blue;
-                        
                     }
                 }
-    
+                
             }
+
         }
+    }
 
-        /* a {
-            padding: 1rem;
-            margin: 2rem auto 0;
-            border: 1px solid red;
-            text-align: center;
-            width: 10rem;
-            border-radius: 8px;
-        } */
+    /* a {
+        padding: 1rem;
+        margin: 2rem auto 0;
+        border: 1px solid red;
+        text-align: center;
+        width: 10rem;
+        border-radius: 8px;
+    } */
 
-        
+    
 
     
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
     
     .projects { 
         // portfolio
@@ -133,6 +118,7 @@
                 .overview .technologies span {
                     font-size: 1rem;
                 }
+
             }
         }
         
