--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,4 @@
-$smartphone: '(max-width: 480px)';
+// $smartphone: '(max-width: 480px)';
 
 *,
 *::before,
